Form and Things to do plus photo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Landing Page1</title>
-    <meta property="og:title" content="Landing Page1" />
+    <title>Rosie And Drew 2024</title>
+    <meta property="og:title" content="Rosie And Drew 2024" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -81,11 +81,23 @@
                   <br />
                 </a>
                 <a href="#details" class="home-link01">Details</a>
-                <a href="#process" class="home-link02 Anchor">Process</a>
+                <a href="#things" class="home-link02 Anchor">
+                  <span>Things To Do</span>
+                  <br />
+                </a>
                 <a href="#ourstory" class="home-link03 Anchor">Our story</a>
               </div>
             </div>
-            <div class="home-right-side"></div>
+            <div class="home-right-side">
+              <a
+                href="https://example.com"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="home-link04"
+              >
+                RSVP
+              </a>
+            </div>
             <div data-role="MobileMenu" class="home-mobile-menu">
               <div class="home-container1">
                 <img
@@ -102,12 +114,12 @@
                 </div>
               </div>
               <div class="home-links-container1">
-                <a href="#resources" class="home-link04 Anchor">Resources</a>
-                <a href="#inspiration" class="home-link05 Anchor">
+                <a href="#resources" class="home-link05 Anchor">Resources</a>
+                <a href="#inspiration" class="home-link06 Anchor">
                   Inspiration
                 </a>
-                <a href="#process" class="home-link06 Anchor">Process</a>
-                <a href="#ourstory" class="home-link07 Anchor">Our story</a>
+                <a href="#process" class="home-link07 Anchor">Process</a>
+                <a href="#ourstory" class="home-link08 Anchor">Our story</a>
               </div>
             </div>
           </div>
@@ -121,7 +133,7 @@
                 <span>Yosemite 2024</span>
                 <br />
               </h1>
-              <span class="home-text06">
+              <span class="home-text008">
                 <span>
                   We invite you to celebrate with us in one of our favorite
                   places...
@@ -134,41 +146,53 @@
         <div id="story" class="home-features">
           <img
             alt="image"
-            src="https://play.teleporthq.io/static/svg/default-img.svg"
+            src="public/playground_assets/yosemite-half-dome-sunset-200h.jpg"
             class="home-image2"
           />
           <div class="home-heading-container">
-            <h2 class="home-text09">
+            <h2 class="home-text011">
               <span>Us &amp; The Valley</span>
               <br />
             </h2>
           </div>
           <div class="home-text-container">
-            <span class="home-text12">
+            <span class="home-text014">
               <span>&nbsp;&nbsp;&nbsp; In 2016, after</span>
               <span>
-                our first year of dating, we visited Yosemite as part of a 5
-                week road trip. We were sharing our first "home" - a rented Ford
-                E-series campervan - and were testing if we were compatible
-                enough to survive together dirty, subsisting on camp food, and
-                sleeping on the side of the road. Turns out we made for pretty
-                good co-pilots.
+                our first year of dating, we visited Yosemite as part of a
+                5-week road trip. During this adventure, we were sharing our
+                first "home" - a rented Ford E-series camper van - and testing
+                if we were compatible enough to live together dirty, subsisting
+                on camp food, and sleeping on the side of the road. Turns out we
+                made for pretty good co-pilots.
               </span>
               <br />
             </span>
-            <span class="home-text16">
+            <span class="home-text018">
               <span>
                 &nbsp;&nbsp;&nbsp; In 2021, we returned to the Valley in the
-                midst of a newer adventure: moving to the west coast amid the
-                pandemic. Blah blah...
+                midst of a newer adventure: moving to the West Coast amid the
+                pandemic. On long-weekend trips, Yosemite felt like a grounding
+                and familiar refuge where we would remind ourselves how content
+                we were with each other's company as we huddled together on
+                chilly shoulder season nights with a cup of tea in the back of
+                our beloved Ellie.
               </span>
               <br />
             </span>
-            <span class="home-text19">
+            <span class="home-text021">
+              <span>
+                &nbsp;&nbsp;&nbsp;&nbsp; It was on one of these long-weekend
+                trips that our engagement began.
+              </span>
+              <br />
+            </span>
+            <span class="home-text024">
               <span>
                 &nbsp;&nbsp;&nbsp;&nbsp; Now, in 2024, we invite you to join us
-                in&nbsp; a return to Yosemite Valley, so we can celebrate blah
-                blah...
+                in a return to Yosemite Valley, so we can celebrate our
+                commitment to each other, and share our love of this beautiful
+                corner of the world.
               </span>
               <br />
             </span>
@@ -176,17 +200,27 @@
         </div>
         <div id="details" class="home-features1">
           <div class="home-heading-container1">
-            <h2 class="home-text22 Section-Heading">Details</h2>
+            <h2 class="home-text027 Section-Heading">Details</h2>
           </div>
           <div class="home-cards-container">
             <div class="home-features-card">
               <div class="home-text-container1">
                 <span class="home-heading01">Where and when?</span>
-                <span class="home-text23">
+                <span class="home-text028">
                   <span>
                     Yosemite&nbsp;National Park. The ceremony will be at the
-                    [link to map] at [time] on Wednesday, April 17th 2024.
-                    Dinner will follow at the Ahwahnee at [time]
+                  </span>
+                  <a
+                    href="https://goo.gl/maps/K2ns1fdMy9s2mF4k6"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="home-link09"
+                  >
+                    Swinging Bridge
+                  </a>
+                  <span>
+                    at 4pm on Tuesday, April 16th 2024. Dinner will follow at
+                    the Ahwahnee at 7pm.
                   </span>
                   <br />
                 </span>
@@ -198,7 +232,7 @@
                   <span>Getting there&nbsp; - Flying</span>
                   <br />
                 </span>
-                <span class="home-text28">
+                <span class="home-text034">
                   <span>
                     SFO is about 5 hours to Yosemite. SAC is about 3.5 hours.
                   </span>
@@ -218,7 +252,7 @@
                   <span>Getting there -&nbsp; driving</span>
                   <br />
                 </span>
-                <span class="home-text34">
+                <span class="home-text040">
                   <span>
                     Yosemite Valley is accessible by car and limited transit
                     options and in April ONLY approachable from the East, not
@@ -234,7 +268,7 @@
             <div class="home-features-card3">
               <div class="home-text-container4">
                 <span class="home-heading04">Lodging</span>
-                <span class="home-text37">
+                <span class="home-text043">
                   <span>
                     Within Yosemite Valley there are hotels, rustic rooms, and
                     traditional camping options. In West Yosemite community a
@@ -251,7 +285,7 @@
                   <span>Getting Around</span>
                   <br />
                 </span>
-                <span class="home-text42">
+                <span class="home-text048">
                   <span>
                     Once in Yosemite Valley, it is fairly easy to get around by
                     foot, bike, or by the NPS operated shuttle bus.
@@ -266,7 +300,7 @@
                   <span>Food, gas, etc</span>
                   <br />
                 </span>
-                <span class="home-text47">
+                <span class="home-text053">
                   <span>There are no gas stations in the Valley.</span>
                   <br />
                 </span>
@@ -274,10 +308,10 @@
             </div>
           </div>
         </div>
-        <div id="process" class="home-services">
+        <div id="things" class="home-things-to-do">
           <div class="home-heading-container2">
-            <h1 class="home-text50 Section-Heading">Things to explore</h1>
-            <span class="home-text51 Section-Text">
+            <h1 class="home-text056 Section-Heading">Things to explore</h1>
+            <span class="home-text057 Section-Text">
               <span>
                 There's no shortage of things to do, and plenty of resources
                 about them. Here's a few of our recommendations:
@@ -287,24 +321,37 @@
           </div>
           <div class="home-cards-container2">
             <div class="home-service-card">
-              <h3 class="home-text54 Card-Heading">TODO</h3>
-              <span class="home-text55 Card-Text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                nec odio. Praesent libero.
+              <h3 class="home-text060 Card-Heading">Waterfalls</h3>
+              <span class="home-text061">
+                <span>
+                  April will be a great time to enjoy the Valley's water
+                  features. Enjoy mild walks to see Bridalveil or lower Yosemite
+                  falls
+                </span>
+                <br />
               </span>
             </div>
             <div class="home-service-card1">
-              <h3 class="home-text56 Card-Heading">TODO</h3>
-              <span class="home-text57 Card-Text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                nec odio. Praesent libero.
+              <h3 class="home-text064 Card-Heading">Hike</h3>
+              <span class="home-text065 Card-Text">
+                <span>
+                  Take an easy walk to Mirror Lake&nbsp;or around the Valley
+                  Loop trail. Or go a little harder up Nevada Falls or Yosemite
+                  Falls.
+                </span>
+                <br />
               </span>
             </div>
             <div class="home-service-card2">
-              <h3 class="home-text58 Card-Heading">TODO</h3>
-              <span class="home-text59 Card-Text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                nec odio. Praesent libero.
+              <h3 class="home-text068 Card-Heading">Picnic</h3>
+              <span class="home-text069 Card-Text">
+                <span>
+                  In the morning, grab a spot near the Ahwahnee. Midday, seek
+                  some shade near Curry Village. Or in the evening, picnic along
+                  the Merced River while watching the sun set down the west end
+                  of the Valley.
+                </span>
+                <br />
               </span>
             </div>
           </div>
@@ -312,8 +359,8 @@
         <div class="home-section-separator"></div>
         <div class="home-team">
           <div class="home-heading-container3">
-            <h1 class="home-text60 Section-Heading">Meet the Team</h1>
-            <span class="home-text61 Section-Text">
+            <h1 class="home-text072 Section-Heading">Meet the Team</h1>
+            <span class="home-text073 Section-Text">
               Lorme ipsum dolor sit amet, consectetur adipiscing elit. Integer
               nec odio. Praesent libero.
             </span>
@@ -379,8 +426,8 @@
         <div class="home-section-separator1"></div>
         <div id="ourstory" class="home-our-story">
           <div class="home-heading-container4">
-            <h1 class="home-text62 Section-Heading">Our story</h1>
-            <span class="home-text63 Section-Text">
+            <h1 class="home-text074 Section-Heading">Our story</h1>
+            <span class="home-text075 Section-Text">
               Lorme ipsum dolor sit amet, consectetur adipiscing elit. Integer
               nec odio. Praesent libero.
             </span>
@@ -402,7 +449,7 @@
                   This text is the name of the article. Lorem ipsum dolor sit
                   metsed do eiusm od tempor.
                 </span>
-                <span class="home-text64 Card-Text">
+                <span class="home-text076 Card-Text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Integer nec odio. Praesent libero. Sed cursus ante dapibus
                   diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.
@@ -411,7 +458,7 @@
                   nulla. Class aptent taciti sociosqu ad litora torquent per
                   conubia nostra, per inceptos himenaeos.
                 </span>
-                <span class="home-text65 Card-Text">
+                <span class="home-text077 Card-Text">
                   Fusce nec tellus sed augue semper porta. Mauris massa.
                   Vestibulum lacinia arcu eget nulla. Class aptent taciti
                   sociosqu ad litora torquent per conubia nostra, per inceptos
@@ -449,7 +496,7 @@
                   class="home-image3"
                 />
                 <div class="home-content-container2">
-                  <span class="home-text68 SmallCard-Heading">
+                  <span class="home-text080 SmallCard-Heading">
                     This text is the name of the article. Lorem ipsum dolor sit
                     metsed ...
                   </span>
@@ -484,7 +531,7 @@
                   class="home-image4"
                 />
                 <div class="home-content-container3">
-                  <span class="home-text71 SmallCard-Heading">
+                  <span class="home-text083 SmallCard-Heading">
                     This text is the name of the article. Lorem ipsum dolor sit
                     metsed ...
                   </span>
@@ -519,7 +566,7 @@
                   class="home-image5"
                 />
                 <div class="home-content-container4">
-                  <span class="home-text74 SmallCard-Heading">
+                  <span class="home-text086 SmallCard-Heading">
                     This text is the name of the article. Lorem ipsum dolor sit
                     metsed ...
                   </span>
@@ -554,7 +601,7 @@
                   class="home-image6"
                 />
                 <div class="home-content-container5">
-                  <span class="home-text77 SmallCard-Heading">
+                  <span class="home-text089 SmallCard-Heading">
                     This text is the name of the article. Lorem ipsum dolor sit
                     metsed ...
                   </span>
@@ -587,7 +634,7 @@
         </div>
         <div class="home-section-separator2"></div>
         <div class="home-get-in-touch">
-          <h2 class="home-text80 Section-Heading">Get in touch</h2>
+          <h2 class="home-text092 Section-Heading">Get in touch</h2>
           <div class="home-content-container6">
             <div class="home-form-container">
               <span class="home-heading08 BigCard-Heading">
@@ -643,6 +690,54 @@
           </div>
         </div>
         <div class="home-section-separator3"></div>
+        <div id="rsvp" class="home-container2">
+          <h1 class="home-text096">RSVP</h1>
+          <span>
+            <span>
+              Your response will help us plan the ceremony logistics and make
+              the correct dinner reservations. You may respond multiple times if
+              anything changes.
+            </span>
+            <br />
+          </span>
+          <form
+            action="https://formsubmit.co/drew.guild+wedding@gmail.com"
+            method="POST"
+            enctype="application/x-www-form-urlencoded"
+            class="home-form"
+          >
+            <div class="home-container3">
+              <label class="home-text099">
+                <span>Your Name :</span>
+                <br />
+                <br />
+              </label>
+              <input
+                type="text"
+                name="invitee-name"
+                required=""
+                placeholder="..."
+                class="input"
+              />
+            </div>
+            <div class="home-container4">
+              <label class="home-text103">Coming?:</label>
+              <label class="home-text104">Yes</label>
+              <input
+                type="radio"
+                name="coming"
+                checked=""
+                value="true"
+                class="home-radiobutton"
+              />
+              <label class="home-text105">No</label>
+              <input type="radio" name="coming" value="false" />
+            </div>
+            <button type="submit" class="home-button button">
+              <span>Submit</span>
+            </button>
+          </form>
+        </div>
         <div class="home-footer-container">
           <div class="home-footer">
             <div class="home-social-links">
