Fix rsvp link and form alignment

--- a/index.html
+++ b/index.html
@@ -94,14 +94,7 @@
               </div>
             </div>
             <div class="home-right-side">
-              <a
-                href="https://example.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="home-link06"
-              >
-                RSVP
-              </a>
+              <a href="#rsvp" class="home-link06">RSVP</a>
             </div>
             <div data-role="MobileMenu" class="home-mobile-menu">
               <div class="home-container01">
