Added form field

--- a/index.html
+++ b/index.html
@@ -871,9 +871,28 @@
               <label class="home-text123">No</label>
               <input type="radio" name="coming" value="false" />
             </div>
+            <div class="home-container17">
+              <label>
+                <span>Message (optional):&nbsp;</span>
+                <br />
+              </label>
+              <textarea
+                placeholder="placeholder"
+                name="rsvp-message"
+                class="textarea"
+              ></textarea>
+            </div>
             <button type="submit" class="home-button button">
               <span>Submit</span>
             </button>
+            <input
+              type="text"
+              placeholder="placeholder"
+              hidden="true"
+              name="_next"
+              value="https://drewguild.github.io/wedding/"
+              class="input"
+            />
           </form>
         </div>
         <div class="home-section-separator4"></div>
